tp1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/usr/share/bluej/userlib/pi4j-core.jar:/home/charbel-uni/Desktop/nfp121.tp1/tp1
-d
/home/charbel-uni/Desktop/nfp121.tp1/tp1/doc
-encoding
windows-1252
-charset
windows-1252
/home/charbel-uni/Desktop/nfp121.tp1/tp1/question3/AuditeurCNAM.java
<---- end of javadoc command ---->
Loading source file /home/charbel-uni/Desktop/nfp121.tp1/tp1/question3/AuditeurCNAM.java...
Constructing Javadoc information...
/home/charbel-uni/Desktop/nfp121.tp1/tp1/question3/AuditeurCNAM.java:9: error: package org.apache.commons.lang3 does not exist
import org.apache.commons.lang3.StringUtils;
                               ^
Standard Doclet version 1.8.0_191
Building tree for all the packages and classes...
Generating /home/charbel-uni/Desktop/nfp121.tp1/tp1/doc/question3/AuditeurCNAM.html...
Generating /home/charbel-uni/Desktop/nfp121.tp1/tp1/doc/question3/package-frame.html...
Generating /home/charbel-uni/Desktop/nfp121.tp1/tp1/doc/question3/package-summary.html...
Generating /home/charbel-uni/Desktop/nfp121.tp1/tp1/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /home/charbel-uni/Desktop/nfp121.tp1/tp1/doc/allclasses-frame.html...
Generating /home/charbel-uni/Desktop/nfp121.tp1/tp1/doc/allclasses-noframe.html...
Generating /home/charbel-uni/Desktop/nfp121.tp1/tp1/doc/index.html...
1 warning
